src/snapshots/tptp__top__tests__formula_data-5.snap
---
source: src/top.rs
expression: parsed
---
Cnf(
    Disjunction(
        Disjunction(
            [
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
