src/snapshots/tptp__top__tests__formula_data-7.snap
---
source: src/top.rs
expression: parsed
---
Fot(
    Function(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "t",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
