src/snapshots/tptp__top__tests__formula_data.snap
---
source: src/top.rs
expression: parsed
---
Tfx(
    Logic(
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
