src/snapshots/tptp__top__tests__formula_role-3.snap
---
source: src/top.rs
expression: parsed
---
FormulaRole(
    LowerWord(
        "conjecture",
    ),
)
