src/snapshots/tptp__top__tests__formula_role.snap
---
source: src/top.rs
expression: parsed
---
FormulaRole(
    LowerWord(
        "axiom",
    ),
)
