src/snapshots/tptp__top__tests__formula_selection-3.snap
---
source: src/top.rs
expression: parsed
---
FormulaSelection(
    Some(
        NameList(
            [
                AtomicWord(
                    Lower(
                        LowerWord(
                            "name",
                        ),
                    ),
                ),
            ],
        ),
    ),
)
