src/snapshots/tptp__top__tests__formula_selection.snap
---
source: src/top.rs
expression: parsed
---
FormulaSelection(
    Some(
        NameList(
            [
                AtomicWord(
                    Lower(
                        LowerWord(
                            "name",
                        ),
                    ),
                ),
                AtomicWord(
                    SingleQuoted(
                        SingleQuoted(
                            "name",
                        ),
                    ),
                ),
                Integer(
                    Integer(
                        "123",
                    ),
                ),
            ],
        ),
    ),
)
