src/snapshots/tptp__top__tests__general_data-11.snap
---
source: src/top.rs
expression: parsed
---
DistinctObject(
    DistinctObject(
        "distinct object",
    ),
)
