src/snapshots/tptp__top__tests__general_data-3.snap
---
source: src/top.rs
expression: parsed
---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
