src/snapshots/tptp__top__tests__general_data-5.snap
---
source: src/top.rs
expression: parsed
---
Function(
    GeneralFunction {
        word: Lower(
            LowerWord(
                "atomic",
            ),
        ),
        terms: GeneralTerms(
            [
                Data(
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ),
            ],
        ),
    },
)
