src/snapshots/tptp__top__tests__general_data-9.snap
---
source: src/top.rs
expression: parsed
---
Number(
    Integer(
        Integer(
            "123",
        ),
    ),
)
